cabal-version:  3.0
name:   book
version:    0.0.0.0

common base
    default-language:   GHC2021
    default-extensions: BlockArguments DerivingVia NoImplicitPrelude QuasiQuotes
    ghc-options:    -Wall -fdefer-typed-holes
    build-depends:  sockets-and-pipes ^>= 1.0

library
    import: base
    hs-source-dirs: library
    exposed-modules:    Book